[gd_scene load_steps=3 format=3 uid="uid://bor3lrxj5c8si"]

[ext_resource type="Script" path="res://level_complete_scene.gd" id="1_ydf3x"]

[sub_resource type="LabelSettings" id="LabelSettings_23fhr"]
font_size = 36

[node name="LevelCompleteCanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ydf3x")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)

[node name="LevelCompleteContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompleteContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelCompleteContainer/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
label_settings = SubResource("LabelSettings_23fhr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelCompleteContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="LevelCompleteContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="NextLevelButton" type="Button" parent="LevelCompleteContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="LevelCompleteContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="LevelCompleteContainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
